Fixed a bug with sticky footer overflowing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -123,10 +123,10 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 40px;
   background-color: #f5f5f5;
 
   .footer-inner {
-    padding: 10px 0;
+    padding: 10px 0 0;
   }
 }
